--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Cinema VNW</h1>
+        <h1 class="titulo">Cinema VNW</h1>
     </header>
+    <main>
+        <!-- main => conteudo principal da pagina -->
+         <!-- card -->
+          <div>
+            <!-- div -> dividir -->
+             <img src="https://m.media-amazon.com/images/M/MV5BYjUzZTQxOTYtOTM2ZC00MmJhLTk4NzAtNmFhOGZhMjMxOWNkXkEyXkFqcGc@._V1_.jpg" alt="Imagem do filme Invocação do mal 4">
+             <h2>Invocação do Mal 4</h2>
+             <button id="btn1">Compre seu Ingresso</button>
+          </div>
+
+          <div>
+            <img src="https://br.web.img3.acsta.net/pictures/17/03/30/22/44/345288.jpg" alt="Filme do It a Coisa">
+            <h2>It - A Coisa</h2>
+            <button>Compre seu Ingresso</button>
+          </div>
+
+          <div>
+            <img src="https://br.web.img2.acsta.net/pictures/23/06/19/19/20/4152271.jpg" alt="Filme Agente Stone">
+            <h2>Agente Stone</h2>
+            <button>Compre seu Ingresso</button>
+          </div>
+    </main>
 </body>
 </html>
